--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
+  flutter_cache_store: ^0.4.0
+  shared_preferences: ^0.4.0
+  cached_network_image: ^0.5.1
+
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
