ref cpu page to rxdart

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   shared_preferences: ^0.4.0
   flutter_money_formatter: ^0.7.3
   flutter_webview_plugin: ^0.3.0+2
+  rxdart: ^0.21.0
+  get_it: ^1.0.3
 
 dev_dependencies:
   flutter_test:
