--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
+  # cupertino_icons: ^0.1.2
 
   cached_network_image: ^0.5.1
   flutter_cache_store: ^0.4.0
@@ -26,8 +26,11 @@ dependencies:
   shared_preferences: ^0.4.0
   flutter_money_formatter: ^0.7.3
   flutter_webview_plugin: ^0.3.0+2
-  rxdart: ^0.21.0
+  rxdart: ^0.18.1
   get_it: ^1.0.3
+  bloc: ^0.9.3
+  equatable: ^0.2.3
+  flutter_bloc: ^0.7.1
 
 dev_dependencies:
   flutter_test:
