--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   bloc: ^0.11.0
   flutter_bloc: ^0.9.0
   equatable: ^0.2.3
+  # webview_flutter: ^0.3.5+3
+  
 
 dev_dependencies:
   flutter_test:
