--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   flutter_range_slider: ^1.1.0
   shared_preferences: ^0.4.0
   flutter_money_formatter: ^0.7.3
-  # flutter_webview_plugin: ^0.3.3
+  webview_flutter: ^0.3.7+1
   rxdart: ^0.21.0
   get_it: ^1.0.3
   bloc: ^0.11.0
