--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,15 +13,15 @@ dependencies:
   # cached_network_image: ^0.5.1
   # flutter_cache_store: ^0.7.2
   http:
-  flutter_range_slider: ^1.1.0
-  shared_preferences: ^0.5.7+3
-  flutter_money_formatter: ^0.7.3
-  webview_flutter: ^0.3.19+5
-  rxdart: ^0.23.1
-  get_it: ^1.0.3
-  bloc: ^3.0.0
-  flutter_bloc: ^3.2.0
-  equatable: ^0.2.3
+  flutter_range_slider: 
+  shared_preferences: 
+  flutter_money_formatter: 
+  webview_flutter: 
+  rxdart: 
+  get_it: 
+  bloc: 
+  flutter_bloc: 
+  equatable: 
 
 dev_dependencies:
   flutter_test:
